create slot machine ui

--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triple Walrus!</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
+
 <body>
-    
+    <div id="bodyWrapper">
+        <h1 id="Accent">Triple Walrus</h1>
+        <h1 id="title">Triple Walrus</h1>
+        <div id="slotMachineBackboard">
+            <div id="reelHoldster"></div>
+            <div id="uiInline">
+                <div class="winsCollum">
+                    <div><div>Last Win:</div> <div>%wins%</div></div>
+                    <div><div>Total Winnings:</div> <div>%tWins%</div></div>
+                </div>
+            <button id="spinButton">Spin!</button>
+            <div class="winsCollum">
+                <div>Current Bet</div>
+                <input type="number" value="1" id="tokenInput" min="1" max="5">
+            </div>
+            <div class="winsCollum">
+                <div>Tokens</div>
+                %currentTokens%
+            </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
