--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -9,11 +9,37 @@
 </head>
 
 <body>
+                <form action="">
     <div id="bodyWrapper">
         <h1 id="Accent">Triple Walrus</h1>
         <h1 id="title">Triple Walrus</h1>
         <div id="slotMachineBackboard">
-            <div id="reelHoldster"></div>
+            <div id="reelHoldster">
+                <div class="reels">
+                    <div id="winLine1"></div>
+                    <div class="reelSymbal animation1"></div>
+                    <div class="reelSymbal animation2"></div>
+                    <div class="reelSymbal animation3"></div>
+                    <div class="reelSymbal animation4"></div>
+                    <div class="reelSymbal animation5"></div>
+                </div>
+                <div class="reels">
+                    <div id="winLine2"></div>
+                    <div class="reelSymbal animation1"></div>
+                    <div class="reelSymbal animation2"></div>
+                    <div class="reelSymbal animation3"></div>
+                    <div class="reelSymbal animation4"></div>
+                    <div class="reelSymbal animation5"></div>
+                </div>
+                <div class="reels">
+                    <div id="winLine3"></div>
+                    <div class="reelSymbal animation1"></div>
+                    <div class="reelSymbal animation2"></div>
+                    <div class="reelSymbal animation3"></div>
+                    <div class="reelSymbal animation4"></div>
+                    <div class="reelSymbal animation5"></div>
+                </div>
+            </div>
             <div id="uiInline">
                 <div class="winsCollum">
                     <div><div>Last Win:</div> <div>%wins%</div></div>
@@ -32,6 +58,7 @@
         </div>
     </div>
     </div>
+                </form>
 </body>
 
 </html>
