--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -22,6 +22,11 @@
                         <div class="reelSymbal animation3"></div>
                         <div class="reelSymbal animation4"></div>
                         <div class="reelSymbal animation5"></div>
+                        <div class="reelSymbal animation6"></div>
+                        <div class="reelSymbal animation7"></div>
+                        <div class="reelSymbal animation8"></div>
+                        <div class="reelSymbal animation9"></div>
+                        <div class="reelSymbal animation10"></div>
                     </div>
                     <div class="reels">
                         <div id="winLine2"></div>
@@ -30,6 +35,11 @@
                         <div class="reelSymbal animation3"></div>
                         <div class="reelSymbal animation4"></div>
                         <div class="reelSymbal animation5"></div>
+                        <div class="reelSymbal animation6"></div>
+                        <div class="reelSymbal animation7"></div>
+                        <div class="reelSymbal animation8"></div>
+                        <div class="reelSymbal animation9"></div>
+                        <div class="reelSymbal animation10"></div>
                     </div>
                     <div class="reels">
                         <div id="winLine3"></div>
@@ -38,6 +48,11 @@
                         <div class="reelSymbal animation3"></div>
                         <div class="reelSymbal animation4"></div>
                         <div class="reelSymbal animation5"></div>
+                        <div class="reelSymbal animation6"></div>
+                        <div class="reelSymbal animation7"></div>
+                        <div class="reelSymbal animation8"></div>
+                        <div class="reelSymbal animation9"></div>
+                        <div class="reelSymbal animation10"></div>
                     </div>
                 </div>
                 <div id="uiInline">
