--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -125,721 +125,22 @@ height: 20px;
 width: 20px;
 position: absolute;
 }
-.animation1{
-background-color: red;
-  animation: spin1 3s forwards;
-}
-.animation2{
-background-color: rgb(255, 174, 0);
-  animation: spin2 3s forwards;
-}
-.animation3{
-background-color: rgb(255, 251, 0);
-  animation: spin3 3s forwards;
-}
-.animation4{
-background-color: rgb(60, 255, 0);
-  animation: spin4 3s forwards;
-}
-.animation5{
-background-color: rgb(0, 255, 255);
-  animation: spin5 3s forwards;
-}
-.animation6{
-background-color: rgb(17, 0, 255);
-  animation: spin6 3s forwards;
-}
-.animation7{
-background-color: rgb(162, 0, 255);
-  animation: spin7 3s forwards;
-}
-.animation8{
-background-color: rgb(255, 0, 221);
-  animation: spin8 3s forwards;
-}
-.animation9{
-background-color: rgb(0, 0, 0);
-  animation: spin9 3s forwards;
-}
-.animation10{
-background-color: rgb(255, 255, 255);
-  animation: spin10 3s forwards;
-}
 
-@keyframes spin1 {
-  /* reelHolster is 55vh, the animation should go from 0 to 20vh to -20vh */
+/* reveals the win line */
+@keyframes revealWin{
   0%{
-    transform: translateY(0vh);
+    height: 0;
+    width: 0;
+    opacity: 0;
   }
-  5%{
-    transform: translateY(10vh);
-  }
-  10%{
-    transform: translateY(20vh);
-  }
-  15%{
-    display: none;
-  }
-  20%{
-    display: none;
-  }
-  25%{
-    display: none;
-  }
-  30%{
-    display: none;
-  }
-  35%{
-    display: none;
-  }
-  40%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  45%{
-    transform: translateY(-10vh);
-  }
-  50%{
-    transform: translateY(0vh);
-  }
-  55%{
-    transform: translateY(10vh);
-  }
-  60%{
-    transform: translateY(20vh);
-  }
-  65%{
-    display: none;
-  }
-  70%{
-    display: none;
-  }
-  75%{
-    display: none;
-  }
-  80%{
-    display: none;
-  }
-  85%{
-    display: none;
-  }
-  90%{
-    transform: translateY(-20vh);
-  }
-  95%{
-    transform: translateY(-10vh);
+  99% {
+    height: 0;
+    width: 0;
+    opacity: 0;
   }
   100%{
-    transform: translateY(0vh);
-  }
-}
-
-@keyframes spin2 {
-  0%{
-    transform: translateY(10vh);
-  }
-  5%{
-    transform: translateY(20vh);
-  }
-  10%{
-    display: none;
-  }
-  15%{
-    display: none;
-  }
-  20%{
-    display: none;
-  }
-  25%{
-    display: none;
-  }
-  30%{
-    display: none;
-  }
-  35%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  40%{
-    transform: translateY(-10vh);
-  }
-  45%{
-    transform: translateY(0vh);
-  }
-  50%{
-    transform: translateY(10vh);
-  }
-  55%{
-    transform: translateY(20vh);
-  }
-  60%{
-    display: none;
-  }
-  65%{
-    display: none;
-  }
-  70%{
-    display: none;
-  }
-  75%{
-    display: none;
-  }
-  80%{
-    display: none;
-  }
-  85%{
-    transform: translateY(-20vh);
-  }
-  90%{
-    transform: translateY(-10vh);
-  }
-  95%{
-    transform: translateY(0vh);
-  }
-  100%{
-    transform: translateY(10vh);
-  }
-}
-
-
-@keyframes spin3 {
-  0%{
-    transform: translateY(20vh);
-  }
-  5%{
-    display: none;
-  }
-  10%{
-    display: none;
-  }
-  15%{
-    display: none;
-  }
-  20%{
-    display: none;
-  }
-  25%{
-    display: none;
-  }
-  30%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  35%{
-    transform: translateY(-10vh);
-  }
-  40%{
-    transform: translateY(0vh);
-  }
-  45%{
-    transform: translateY(10vh);
-  }
-  50%{
-    transform: translateY(20vh);
-  }
-  55%{
-    display: none;
-  }
-  60%{
-    display: none;
-  }
-  65%{
-    display: none;
-  }
-  70%{
-    display: none;
-  }
-  75%{
-    display: none;
-  }
-  80%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  85%{
-    transform: translateY(-10vh);
-  }
-  90%{
-    transform: translateY(0vh);
-  }
-  95%{
-    transform: translateY(10vh);
-  }
-  100%{
-    transform: translateY(20vh);
-  }
-}
-
-@keyframes spin4 {
-  0%{
-    display: none;
-  }
-  5%{
-    display: none;
-  }
-  10%{
-    display: none;
-  }
-  15%{
-    display: none;
-  }
-  20%{
-    display: none;
-  }
-  25%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  30%{
-    transform: translateY(-10vh);
-  }
-  35%{
-    transform: translateY(0vh);
-  }
-  40%{
-    transform: translateY(10vh);
-  }
-  45%{
-    transform: translateY(20vh);
-  }
-  50%{
-    display: none;
-  }
-  55%{
-    display: none;
-  }
-  60%{
-    display: none;
-  }
-  65%{
-    display: none;
-  }
-  70%{
-    display: none;
-  }
-  75%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  80%{
-    transform: translateY(-10vh);
-  }
-  85%{
-    transform: translateY(0vh);
-  }
-  90%{
-    transform: translateY(10vh);
-  }
-  95%{
-    transform: translateY(20vh);
-  }
-  100%{
-    display: none;
-  }
-}
-
-@keyframes spin5 {
-  0%{
-    display: none;
-  }
-  5%{
-    display: none;
-  }
-  10%{
-    display: none;
-  }
-  15%{
-    display: none;
-  }
-  20%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  25%{
-    transform: translateY(-10vh);
-  }
-  30%{
-    transform: translateY(0vh);
-  }
-  35%{
-    transform: translateY(10vh);
-  }
-  40%{
-    transform: translateY(20vh);
-  }
-  45%{
-    display: none;
-  }
-  50%{
-    display: none;
-  }
-  55%{
-    display: none;
-  }
-  60%{
-    display: none;
-  }
-  65%{
-    display: none;
-  }
-  70%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  75%{
-    transform: translateY(-10vh);
-  }
-  80%{
-    transform: translateY(0vh);
-  }
-  85%{
-    transform: translateY(10vh);
-  }
-  90%{
-    transform: translateY(20vh);
-  }
-  95%{
-    display: none;
-  }
-  100%{
-    display: none;
-  }
-}
-
-@keyframes spin6 {
-  0%{
-    display: none;
-  }
-  5%{
-    display: none;
-  }
-  10%{
-    display: none;
-  }
-  15%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  20%{
-    transform: translateY(-10vh);
-  }
-  25%{
-    transform: translateY(0vh);
-  }
-  30%{
-    transform: translateY(10vh);
-  }
-  35%{
-    transform: translateY(20vh);
-  }
-  40%{
-    display: none;
-  }
-  45%{
-    display: none;
-  }
-  50%{
-    display: none;
-  }
-  55%{
-    display: none;
-  }
-  60%{
-    display: none;
-  }
-  65%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  70%{
-    transform: translateY(-10vh);
-  }
-  75%{
-    transform: translateY(0vh);
-  }
-  80%{
-    transform: translateY(10vh);
-  }
-  85%{
-    transform: translateY(20vh);
-  }
-  90%{
-    display: none;
-  }
-  95%{
-    display: none;
-  }
-  100%{
-    display: none;
-  }
-}
-
-@keyframes spin7 {
-  0%{
-    display: none;
-  }
-  5%{
-    display: none;
-  }
-  10%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  15%{
-    transform: translateY(-10vh);
-  }
-  20%{
-    transform: translateY(0vh);
-  }
-  25%{
-    transform: translateY(10vh);
-  }
-  30%{
-    transform: translateY(20vh);
-  }
-  35%{
-    display: none;
-  }
-  40%{
-    display: none;
-  }
-  45%{
-    display: none;
-  }
-  50%{
-    display: none;
-  }
-  55%{
-    display: none;
-  }
-  60%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  65%{
-    transform: translateY(-10vh);
-  }
-  70%{
-    transform: translateY(0vh);
-  }
-  75%{
-    transform: translateY(10vh);
-  }
-  80%{
-    transform: translateY(20vh);
-  }
-  85%{
-    display: none;
-  }
-  90%{
-    display: none;
-  }
-  95%{
-    display: none;
-  }
-  100%{
-    display: none;
-  }
-}
-
-@keyframes spin8 {
-  0%{
-    display: none;
-  }
-  5%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  10%{
-    transform: translateY(-10vh);
-  }
-  15%{
-    transform: translateY(0vh);
-  }
-  20%{
-    transform: translateY(10vh);
-  }
-  25%{
-    transform: translateY(20vh);
-  }
-  30%{
-    display: none;
-  }
-  35%{
-    display: none;
-  }
-  40%{
-    display: none;
-  }
-  45%{
-    display: none;
-  }
-  50%{
-    display: none;
-  }
-  55%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  60%{
-    transform: translateY(-10vh);
-  }
-  65%{
-    transform: translateY(0vh);
-  }
-  70%{
-    transform: translateY(10vh);
-  }
-  75%{
-    transform: translateY(20vh);
-  }
-  80%{
-    display: none;
-  }
-  85%{
-    display: none;
-  }
-  90%{
-    display: none;
-  }
-  95%{
-    display: none;
-  }
-  100%{
-    display: none;
-  }
-}
-
-@keyframes spin9 {
-  0%{
-    transform: translateY(-20vh);
-  }
-  5%{
-    transform: translateY(-10vh);
-  }
-  10%{
-    transform: translateY(0vh);
-  }
-  15%{
-    transform: translateY(10vh);
-  }
-  20%{
-    transform: translateY(20vh);
-  }
-  25%{
-    display: none;
-  }
-  30%{
-    display: none;
-  }
-  35%{
-    display: none;
-  }
-  40%{
-    display: none;
-  }
-  45%{
-    display: none;
-  }
-  50%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  55%{
-    transform: translateY(-10vh);
-  }
-  60%{
-    transform: translateY(0vh);
-  }
-  65%{
-    transform: translateY(10vh);
-  }
-  70%{
-    transform: translateY(20vh);
-  }
-  75%{
-    display: none;
-  }
-  80%{
-    display: none;
-  }
-  85%{
-    display: none;
-  }
-  90%{
-    display: none;
-  }
-  95%{
-    display: none;
-  }
-  100%{
-    transform: translateY(-20vh);
-  }
-}
-
-@keyframes spin10 {
-  0%{
-    transform: translateY(-10vh);
-  }
-  5%{
-    transform: translateY(0vh);
-  }
-  10%{
-    transform: translateY(10vh);
-  }
-  15%{
-    transform: translateY(20vh);
-  }
-  20%{
-    display: none;
-  }
-  25%{
-    display: none;
-  }
-  30%{
-    display: none;
-  }
-  35%{
-    display: none;
-  }
-  40%{
-    display: none;
-  }
-  45%{
-    display: inline;
-    transform: translateY(-20vh);
-  }
-  50%{
-    transform: translateY(-10vh);
-  }
-  55%{
-    transform: translateY(0vh);
-  }
-  60%{
-    transform: translateY(10vh);
-  }
-  65%{
-    transform: translateY(20vh);
-  }
-  70%{
-    display: none;
-  }
-  75%{
-    display: none;
-  }
-  80%{
-    display: none;
-  }
-  85%{
-    display: none;
-  }
-  90%{
-    display: none;
-  }
-  95%{
-    transform: translateY(-20vh);
-  }
-  100%{
-    transform: translateY(-10vh);
+    height: auto;
+    width: auto;
+    opacity: 1;
   }
 }
