--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triple Walrus!</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/animation1.css">
+    <link rel="stylesheet" href="stylesheets/animation2.css">
+    <link rel="stylesheet" href="stylesheets/animation3.css">
 </head>
 
 <body>
@@ -16,7 +19,7 @@
             <div id="slotMachineBackboard">
                 <div id="reelHoldster">
                     <div class="reels">
-                        <div id="winLine1"></div>
+                        <div id="winLine1">Walrus!</div>
                         <div class="reelSymbal animation1"></div>
                         <div class="reelSymbal animation2"></div>
                         <div class="reelSymbal animation3"></div>
@@ -29,30 +32,30 @@
                         <div class="reelSymbal animation10"></div>
                     </div>
                     <div class="reels">
-                        <div id="winLine2"></div>
-                        <div class="reelSymbal animation1"></div>
-                        <div class="reelSymbal animation2"></div>
-                        <div class="reelSymbal animation3"></div>
-                        <div class="reelSymbal animation4"></div>
-                        <div class="reelSymbal animation5"></div>
-                        <div class="reelSymbal animation6"></div>
-                        <div class="reelSymbal animation7"></div>
-                        <div class="reelSymbal animation8"></div>
-                        <div class="reelSymbal animation9"></div>
-                        <div class="reelSymbal animation10"></div>
+                        <div id="winLine2">Walrus!</div>
+                        <div class="reelSymbal animation11"></div>
+                        <div class="reelSymbal animation12"></div>
+                        <div class="reelSymbal animation13"></div>
+                        <div class="reelSymbal animation14"></div>
+                        <div class="reelSymbal animation15"></div>
+                        <div class="reelSymbal animation16"></div>
+                        <div class="reelSymbal animation17"></div>
+                        <div class="reelSymbal animation18"></div>
+                        <div class="reelSymbal animation19"></div>
+                        <div class="reelSymbal animation20"></div>
                     </div>
                     <div class="reels">
-                        <div id="winLine3"></div>
-                        <div class="reelSymbal animation1"></div>
-                        <div class="reelSymbal animation2"></div>
-                        <div class="reelSymbal animation3"></div>
-                        <div class="reelSymbal animation4"></div>
-                        <div class="reelSymbal animation5"></div>
-                        <div class="reelSymbal animation6"></div>
-                        <div class="reelSymbal animation7"></div>
-                        <div class="reelSymbal animation8"></div>
-                        <div class="reelSymbal animation9"></div>
-                        <div class="reelSymbal animation10"></div>
+                        <div id="winLine3">Walrus!</div>
+                        <div class="reelSymbal animation21"></div>
+                        <div class="reelSymbal animation22"></div>
+                        <div class="reelSymbal animation23"></div>
+                        <div class="reelSymbal animation24"></div>
+                        <div class="reelSymbal animation25"></div>
+                        <div class="reelSymbal animation26"></div>
+                        <div class="reelSymbal animation27"></div>
+                        <div class="reelSymbal animation28"></div>
+                        <div class="reelSymbal animation29"></div>
+                        <div class="reelSymbal animation30"></div>
                     </div>
                 </div>
                 <div id="uiInline">
