--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,15 +103,18 @@ body {
   height: 60vh;
   width: 75vw;
   margin-top: 5vh;
-  background-color: rgba(71, 120, 255, 1);
+  /* background-color: rgba(71, 120, 255, 1); */
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  border: 10px solid black;
+  border-radius: 25px;
 }
 
 .reels{
-  border: 1px solid black;
+  border: 5px dotted #ffed47; /* maybe delete this ones symbels are chosen? */
+  background-color: rgba(255, 255, 255, 0.2);
   height: 55vh;
   width: 20vw;
   display: flex;
