add game functinality and score system

--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -19,7 +19,7 @@
             <div id="slotMachineBackboard">
                 <div id="reelHoldster">
                     <div class="reels">
-                        <div id="winLine1">Walrus!</div>
+                        <div id="winLine1">Spin</div>
                         <div class="reelSymbal animation1"></div>
                         <div class="reelSymbal animation2"></div>
                         <div class="reelSymbal animation3"></div>
@@ -32,7 +32,7 @@
                         <div class="reelSymbal animation10"></div>
                     </div>
                     <div class="reels">
-                        <div id="winLine2">Walrus!</div>
+                        <div id="winLine2">To</div>
                         <div class="reelSymbal animation11"></div>
                         <div class="reelSymbal animation12"></div>
                         <div class="reelSymbal animation13"></div>
@@ -45,7 +45,7 @@
                         <div class="reelSymbal animation20"></div>
                     </div>
                     <div class="reels">
-                        <div id="winLine3">Walrus!</div>
+                        <div id="winLine3">Play!</div>
                         <div class="reelSymbal animation21"></div>
                         <div class="reelSymbal animation22"></div>
                         <div class="reelSymbal animation23"></div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="winsCollum">
                         <div>Tokens</div>
-                        %currentTokens%
+                        <%= data.tokens %>
                     </div>
                 </div>
             </div>
