add symbles, add functionaliy to last win, total win, tokens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,11 +121,11 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  font-size: 2em;
 }
 
 .reelSymbal{
 height: 20px;
-width: 20px;
 position: absolute;
 }
 
