consistency changes made, removed console.logs

--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -32,7 +32,7 @@
                         <div class="reelSymbal animation10">🍇</div>
                     </div>
                     <div class="reels">
-                        <div id="winLine2" class="winLine"><%= SecondSpin %></div>
+                        <div id="winLine2" class="winLine"><%= secondSpin %></div>
                         <div class="reelSymbal animation11">~</div>
                         <div class="reelSymbal animation12">~</div>
                         <div class="reelSymbal animation13">🍇</div>
@@ -45,7 +45,7 @@
                         <div class="reelSymbal animation20">~</div>
                     </div>
                     <div class="reels">
-                        <div id="winLine3" class="winLine"><%= ThirdSpin %></div>
+                        <div id="winLine3" class="winLine"><%= thirdSpin %></div>
                         <div class="reelSymbal animation21">~</div>
                         <div class="reelSymbal animation22">🍇</div>
                         <div class="reelSymbal animation23">~</div>
