--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -7,10 +7,8 @@
     <title>Triple Walrus!</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/animation1.css">
-    <link rel="stylesheet" href="stylesheets/animation2.css">
-    <link rel="stylesheet" href="stylesheets/animation3.css">
 </head>
-
+<a id="infoLink" href="/info">info</a>
 <body>
     <form action="/" method="post">
         <div id="bodyWrapper">
