--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/animation1.css">
 </head>
-<a id="infoLink" href="/info">info</a>
+<div id="infoLink">
+<a href="/info">info</a>
+|
+<a href="/register">Register</a>
+|
+<a href="#">Sign In</a>
+</div>
 <body>
     <form action="/" method="post">
         <div id="bodyWrapper">
