--- a/views/register.ejs
+++ b/views/register.ejs
@@ -67,7 +67,7 @@
   </style>
 </head>
 <body>
-  <form>
+  <form action="/register" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
 
