add login functinality

--- a/views/TripleWalrus.ejs
+++ b/views/TripleWalrus.ejs
@@ -13,7 +13,7 @@
 |
 <a href="/register">Register</a>
 |
-<a href="#">Sign In</a>
+<a href="/login">login</a>
 </div>
 <body>
     <form action="/" method="post">
