--- a/views/login.ejs
+++ b/views/login.ejs
@@ -67,15 +67,12 @@
   </style>
 </head>
 <body>
-  <form action="/register" method="post">
+  <form action="/login" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
 
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
 
     <button type="submit">Register</button>
   </form>
@@ -83,7 +80,7 @@
   <div class="links">
     <a href="/">Go back</a>
     <span>|</span>
-    <a href="/login">Login</a>
+    <a href="/register">Register</a>
   </div>
 </body>
 </html>
