--- a/views/userDisplay.ejs
+++ b/views/userDisplay.ejs
@@ -71,6 +71,7 @@
   <form action="/logout" method="post">
     <button>Logout</button>
   </form>
+  <a href="/delete">Delete account</a>
 
 </body>
 </html>
