--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,7 +74,7 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
 
-    <button type="submit">Register</button>
+    <button type="submit">Login</button>
   </form>
 
   <div class="links">
