--- a/views/deletePage.ejs
+++ b/views/deletePage.ejs
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Delete Page</title>
+    <link rel="stylesheet" href="stylesheets/secondaryPages.css">
 </head>
 <body>
+<div class="borderStyle">
 <h1>WARNING! You're about to delete your accont</h1>
 <form action="/deleteConfirm" method="post">
-    <button>Yes, Delete my account</button>
-    <a href="/user">No, Don't delete my account.</a>
+<div class="buttonWrapper">
+    <button class="buttonStyle">Yes, Delete my account</button>
+    <a href="/user" class="buttonStyle">No, Back to Saftey</a>
+</div>
 </form>    
+</div>
 </body>
 </html>
