--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,70 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Form</title>
-  <style>
-    body {
-      background-color: #5e005e;
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      flex-direction: column;
-    }
-
-    form {
-      background-color: rgba(236, 226, 86, 0.5);
-      padding: 20px;
-      border-radius: 10px;
-      width: 300px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 16px;
-      box-sizing: border-box;
-    }
-
-    button {
-      background-color: #fd2c4f;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: #ffed47;
-    }
-
-    .links {
-      margin-top: 10px;
-      text-align: center;
-    }
-
-    a {
-      color: hotpink;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Login Form</title>
+  <link rel="stylesheet" href="stylesheets/secondaryPages.css">
 </head>
 <body>
+<div class="borderStyle">
   <form action="/login" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
@@ -74,13 +15,13 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
 
-    <button type="submit">Login</button>
+    <button type="submit" class="buttonStyle">Login</button>
   </form>
-
-  <div class="links">
-    <a href="/">Go back</a>
-    <span>|</span>
-    <a href="/register">Register</a>
+<div class="buttonWrapper">
+   <a href="/" class="buttonStyle">Go back</a>
+    <a href="/login" class="buttonStyle">Login</a>
+</div>
+  </div>
   </div>
 </body>
 </html>
