--- a/views/userDisplay.ejs
+++ b/views/userDisplay.ejs
@@ -4,58 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Information</title>
-  <style>
-    body {
-      background-color: #5e005e;
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      flex-direction: column;
-    }
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    li {
-      margin-bottom: 8px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-
-    button {
-      background-color: #fd2c4f;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 10px;
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: #ffed47;
-    }
-
-    @media (min-width: 600px) {
-      /* Apply additional styling for larger screens if needed */
-      ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
+ <link rel="stylesheet" href="stylesheets/secondaryPages.css">
 </head>
 <body>
+<div class="borderStyle">
   <h1>User Information</h1>
   
   <ul>
@@ -69,9 +21,11 @@
 
   <!-- logout button -->
   <form action="/logout" method="post">
-    <button>Logout</button>
+  <div class="buttonWrapper">
+    <button class="buttonStyle">Logout</button>
   </form>
-  <a href="/delete">Delete account</a>
-
+  <a href="/delete" class="buttonStyle">Delete account</a>
+</div>
+</div>
 </body>
 </html>
