update info styles and some secondary styles

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
   </form>
 <div class="buttonWrapper">
    <a href="/" class="buttonStyle">Go back</a>
-    <a href="/login" class="buttonStyle">Login</a>
+    <a href="/register" class="buttonStyle">Register</a>
 </div>
   </div>
   </div>
