--- a/public/stylesheets/secondaryPages.css
+++ b/public/stylesheets/secondaryPages.css
@@ -67,4 +67,21 @@ form {
     display: flex;
     align-items: center;
     flex-direction: row;
+    justify-content: center;
+}
+
+.info{
+    width: 90vw;
+}
+.info p {
+    /* margin: 0 5vw 0 5vw; */
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+.info h1{
+    font-size: 2.5rem;
+}
+.info a{
+    text-decoration: underline;
+    color: rgb(179, 255, 0);
 }
