add back button to user page

--- a/views/userDisplay.ejs
+++ b/views/userDisplay.ejs
@@ -25,6 +25,7 @@
   </form>
   <a href="/delete" class="buttonStyle">Delete account</a>
 </div>
+<a href="/" class="buttonStyle">Back To Triple Walrus</a>
 </div>
 </body>
 </html>
